# hc-spin-rust-utils

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml  release-prepare.yml  release-publish.yml
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: decode_webhapp.rs  lib.rs  types.rs  zome_call_signer.rs
