[package]
edition = "2021"
name = "hc-spin-rust-utils"
version = "0.400.0-rc.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# We keep those holochain dependencies separate from the root project to avoid irrelevant incompatibilities
holochain_integrity_types = "0.4.0-rc.0"
holochain_types = "0.4.0-rc.1"
holochain_zome_types = "0.4.0-rc.1"
holo_hash = "0.4.0-rc.0"
kitsune_p2p_timestamp = "0.4.0-rc.0"
lair_keystore_api = "0.5.2"

hex = "0.4.3"
futures = "0.3"
nanoid = "0.4.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
  "async",
  "serde-json",
] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
url = "2.2"
url2 = "0.0.6"
zip = "0.5.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
