[package]
edition = "2021"
name = "hc-spin-rust-utils"
version = "0.601.1-rc.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# We keep those holochain dependencies separate from the root project to avoid irrelevant incompatibilities
holochain_integrity_types = "0.6.1-rc.0"
holochain_types = "0.6.1-rc.0"
holochain_zome_types = "0.6.1-rc.0"
holo_hash = "0.6.1-rc.0"
lair_keystore_api = "0.6.3"

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
  "async",
  "serde-json",
] }
napi-derive = "2.12.2"
url = "2.2"
zip = "0.5.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
