[package]
edition = "2021"
name = "hc-spin-rust-utils"
version = "0.600.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# We keep those holochain dependencies separate from the root project to avoid irrelevant incompatibilities
holochain_types = "0.7.0-dev.29"
holochain_zome_types = "0.7.0-dev.18"
holo_hash = "0.7.0-dev.9"
lair_keystore_api = "0.7.1"

# Default enable napi9 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.9.4", default-features = false, features = [
  "napi9",
  "tokio_rt",
  "async",
  "serde-json",
] }
napi-derive = "3.5.7"
url = "2.2"
zip = "8.6.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
